--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -13,11 +13,17 @@
     "@aws-sdk/client-cognito-identity-provider": "^3.777.0",
     "@openauthjs/openauth": "^0.4.3",
     "aws-amplify": "^6.14.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cookies-next": "^5.1.0",
+    "lucide-react": "^0.487.0",
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sst": "3.9.37"
+    "sst": "3.9.37",
+    "tailwind-merge": "^3.1.0",
+    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
@@ -31,7 +37,7 @@
     "eslint-config-prettier": "^10.1.1",
     "prettier": "^3.5.3",
     "prettier-plugin-organize-imports": "^4.1.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.3",
     "typescript": "^5"
   }
 }
